#-------------------------------------------------------------------------------
# Toolkit
#-------------------------------------------------------------------------------


IF(NOT N_BUILD_FIRSTTIME)

IF(N_BUILD_OLD)
add_subdirectory(animconverter3)
add_subdirectory(buildclassregistryheader)
add_subdirectory(binaryxmlconverter)
add_subdirectory(countlines3)
add_subdirectory(distributedjobservice)
add_subdirectory(distributedtesttool)
add_subdirectory(n2batchconverter3)
add_subdirectory(n2converter3)
add_subdirectory(n2tableconverter)
add_subdirectory(suiconverter3)
add_subdirectory(sequenceconverter3)
add_subdirectory(synctool3)
add_subdirectory(nsc3)
add_subdirectory(nsh3)
add_subdirectory(genrandtable)
add_subdirectory(buildresdict3)
add_subdirectory(n3viewer)
add_subdirectory(levelxmltodb)
add_subdirectory(templatexmltodb)
add_subdirectory(shaderbatcher3)
add_subdirectory(guibatcher3)
add_subdirectory(gamebatcher3)
ENDIF()

add_subdirectory(archiver3)
add_subdirectory(audiobatcher3)
add_subdirectory(gamebatcher)
add_subdirectory(modelbatcher3)
add_subdirectory(fbxbatcher3)
add_subdirectory(levelviewer)
add_subdirectory(texturebatcher3)
add_subdirectory(assetbatcher)
#add_subdirectory(toolkitutil)
add_subdirectory(editorfeatures)
IF(MSVC)
add_subdirectory(setup)
ENDIF()
add_subdirectory(shaderbatcher)
ENDIF()

add_subdirectory(toolkitutil)
add_subdirectory(idldocument)
add_subdirectory(idlcompiler)
